--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="modal-content">
                 <div class="modal-body" style="padding:0">
                     <div class="card">
-                        <h3 class="card-header text-white bg-warning">Reserve a Table <button type="button"
+                        <h3 class="card-header text-body bg-warning">Reserve a Table <button type="button"
                                 class="close" data-dismiss="modal">&times;</button></h3>
                         <div class="card-body">
                             <dl class="row">
